# ChangeLog for games-rpg/tmw
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-rpg/tmw/ChangeLog,v 1.6 2005/07/09 22:59:36 mr_bones_ Exp $

*tmw-0.0.14.1 (09 Jul 2005)

  09 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org> +tmw-0.0.14.1.ebuild:
  version bump (bug #98413)

*tmw-0.0.14 (06 Jul 2005)

  06 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org> +tmw-0.0.14.ebuild:
  version bump

  15 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org> tmw-0.0.12.ebuild,
  tmw-0.0.13.ebuild:
  Removed INSTALL file.

  08 Jun 2005; Michael Sterrett <mr_bones_@gentoo.org> tmw-0.0.12.ebuild,
  tmw-0.0.13.ebuild:
  games_pkg_setup in pkg_setup; fix bug #95483

*tmw-0.0.13 (06 Jun 2005)

  06 Jun 2005; Mike Frysinger <vapier@gentoo.org> +tmw-0.0.13.ebuild:
  Version bump.

*tmw-0.0.12 (04 May 2005)

  04 May 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Alessio D'Ascanio #91356.