@@ -1,6 +1,11 @@
 # ChangeLog for games-rpg/tmw
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/tmw/ChangeLog,v 1.6 2005/07/09 22:59:36 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/tmw/ChangeLog,v 1.7 2005/08/24 02:46:48 vapier Exp $
+
+*tmw-0.0.15 (24 Aug 2005)
+
+  24 Aug 2005; Mike Frysinger <vapier@gentoo.org> +tmw-0.0.15.ebuild:
+  Version bump #101278 by Andy Holmes.
 
 *tmw-0.0.14.1 (09 Jul 2005)
 
